services/apps/cloudijs-test-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudijs-test-2
  namespace: apps
  labels:
    app: cloudijs-test-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudijs-test-2
  template:
    metadata:
      labels:
        app: cloudijs-test-2
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
