services/apps/cloudijs-test-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudijs-test-2
  namespace: apps
spec:
  selector:
    app: cloudijs-test-2
  ports:
    - name: http
      port: 80
      targetPort: 80
