services/apps/cloudijs-test-2/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudijs-test-2
  namespace: apps
spec:
  hostnames:
    - test-2.cloudijs.nl
  parentRefs:
    - name: shared-gateway-http
      namespace: cloudijs-system
  rules:
    - backendRefs:
        - name: cloudijs-test-2
          port: 80
